# kushnerchuk-textredaktor

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  resource.qrc
